test junit and testfx